--- a/src/app/login/signup.component.html
+++ b/src/app/login/signup.component.html
@@ -7,51 +7,51 @@
             <ScrollView height="250">
                 <GridLayout rows="auto auto auto auto,auto">
 
-                    <StackLayout row="0" class="input-field">
+                    <StackLayout row="0" class="input-field" [ngClass]="{invalid:registroForm.controls['nombre'].errors?.minlength}">
                         <Label text="{{iconNombre}}  Nombre y Apellido" class="label-signup font-weight-bold m-b-5"></Label>
                         <TextField class="input" autocorrect="false" formControlName="nombre"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
-                        <Label text="Es necesario el nombre" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.required"></Label>
+                        <!-- <Label text="Es necesario el nombre" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.required"></Label> -->
                         <Label text="Por lo menos tres caracteres" class="text-danger h6" *ngIf="registroForm.controls['nombre'].errors?.minlength"></Label>
 
                     </StackLayout>
 
-                    <StackLayout row="1" class="input-field">
+                    <StackLayout row="1" class="input-field" [ngClass]="{invalid:registroForm.controls['email'].errors?.email}">
                         <Label text="{{iconEmail}}  Correo Electrónico" class="label-signup font-weight-bold m-b-5"></Label>
                         <TextField class="input" max="10" keyboardType="email" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
-                        <Label text="Es necesario el email" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.required"></Label>
+                        <!-- <Label text="Es necesario el email" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.required"></Label> -->
                         <Label text="No es un email válido" class="text-danger h6" *ngIf="registroForm.controls['email'].errors?.email"></Label>
                     </StackLayout>
 
-                    <StackLayout row="2" class="input-field">
+                    <StackLayout row="2" class="input-field" [ngClass]="{invalid:registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength}">
                         <Label text="{{iconTelefono}}  Número telefónico" class="label-signup font-weight-bold m-b-5"></Label>
                         <TextField class="input" maxLength="10" keyboardType="number" formControlName="telefono"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
-                        <Label text="Es necesario el telefono" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.required"></Label>
+                        <!-- <Label text="Es necesario el telefono" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.required"></Label> -->
                         <Label text="No es un número valido" class="text-danger h6" *ngIf="registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength"></Label>
                     </StackLayout>
 
-                    <StackLayout row="3" class="input-field">
+                    <StackLayout row="3" class="input-field" [ngClass]="{invalid:registroForm.controls['password'].errors?.minlength}">
                         <Label text="{{iconPassword}}  Contraseña" class="label-signup font-weight-bold m-b-5"></Label>
                         <TextField class="input" secure="true" formControlName="password"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
-                        <Label text="Es necesario la contraseña" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.required"></Label>
+                        <!-- <Label text="Es necesario la contraseña" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.required"></Label> -->
                         <Label text="Por lo menos 6 caracteres" class="text-danger h6" *ngIf="registroForm.controls['password'].errors?.minlength"></Label>
                     </StackLayout>
 
-                    <StackLayout row="4" class="input-field">
+                    <StackLayout row="4" class="input-field" [ngClass]="{invalid:registroForm.errors?.sonIguales && !registroForm.pristine}">
                         <Label text="{{iconPassword}}  Confirmar Contraseña" class="label-signup font-weight-bold m-b-5"></Label>
                         <TextField class="input" secure="true" formControlName="password2"></TextField>
                         <StackLayout class="hr-light"></StackLayout>
-                        <Label text="Es necesario confirmar contraseña" class="text-danger h6" *ngIf="registroForm.controls['password2'].errors?.required"></Label>
+                        <!-- <Label text="Es necesario confirmar contraseña" class="text-danger h6" *ngIf="registroForm.controls['password2'].errors?.required"></Label> -->
                         <Label text="Las contraseñas no coinciden" class="text-danger h6" *ngIf="registroForm.errors?.sonIguales && !registroForm.pristine"></Label>
                     </StackLayout>
 
                 </GridLayout>
             </ScrollView>
 
-            <Button [visibility]="registroForm.valid ? 'visible' : 'collapse'" text="Registrar &#xe909;" class="ico btn btn-primary btn-active" (tap)="signup()"></Button>
+            <Button [isEnabled]="registroForm.valid" text="Registrar &#xe909;" class="ico btn btn-primary btn-active" (tap)="signup()"></Button>
             <Button text="Regresar &#xe907;" textwrap="true" (tap)="regresarLogin()" class="p-15 ico btn-outline btn-rounded-lg btn-active"></Button>
 
         </StackLayout>
