--- a/src/app/login/signup.component.css
+++ b/src/app/login/signup.component.css
@@ -3,14 +3,14 @@
 .page {
     align-items: center;
     flex-direction: column;
+    justify-content: center;
+    background-size: cover;
+    background-image: url("~/assets/images/background.png");
 }
 
 .card {
     background-color: #f0f0f0;
-    margin-top: 10;
-    margin-top: 10;
-    margin-right: 10;
-    margin-left: 10;
+    padding: 10 10 10 10;
     border-radius: 7;
 }
 
@@ -21,19 +21,28 @@
     vertical-align: middle;
 }
 
-.logo {
-    margin-bottom: 10;
-    height: 70;
-    width: 70;
-}
-
 .header {
-    horizontal-align: center;
     font-size: 24;
     font-weight: bold;
-    margin-bottom: 10;
     text-align: center;
     color: #D51A1A;
+}
+
+.container-bottom {
+    margin-top: 10;
+    margin-bottom: 10;
+}
+
+.container-top {
+    margin-top: 10;
+    margin-bottom: 10;
+}
+
+.logo {
+    margin-bottom: 10;
+    margin-top: 10;
+    height: 70;
+    width: 70;
 }
 
 .input-field {
@@ -66,20 +75,4 @@
 .label-signup {
     height: 18;
     font-size: 15;
-}
-
-.container-bottom {
-    vertical-align: bottom;
-    margin-top: 10;
-    margin-bottom: 10;
-    margin-left: 30;
-    margin-right: 30;
-}
-
-.container-top {
-    vertical-align: top;
-    margin-top: 10;
-    margin-bottom: 20;
-    margin-left: 20;
-    margin-right: 20;
 }
