--- a/src/app/login/signup.component.html
+++ b/src/app/login/signup.component.html
@@ -54,7 +54,7 @@
 
             <StackLayout class="container-bottom card">
                 <Button [isEnabled]="registroForm.valid" text="Registrar &#xe909;" class="ico btn btn-primary btn-active" (tap)="signup()"></Button>
-                <Label text="¿Ya tienes una cuenta? Regresar" textwrap="true" (tap)="regresarLogin()" class="text-center"></Label>
+                <Label text="¿Ya tienes una cuenta? Regresar" textwrap="true" (tap)="regresarLogin()" class="h4 text-center"></Label>
             </StackLayout>
 
         </StackLayout>
