--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -13,7 +13,7 @@
         <Label class="p-15 iconos" [text]="iconSearch"></Label>
     </ActionItem>
 
-    <ActionItem *ngIf="aparecer" (tap)="aparecerBuscar(+1)" ios.position="left" android.position="actionBar">
+    <ActionItem *ngIf="aparecer" (tap)="aparecerBuscar(+1)" ios.position="right">
         <Label class="p-15 iconos" text="Cerrar"></Label>
     </ActionItem>
 
