--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,5 +1,5 @@
 <ns-action-bar title="Lista de Pedidos ( {{ _cs.items.length}} )" class="action-bar" [showBackButton]="false">
-    <ActionItem (tap)="back()">
+    <ActionItem (tap)="back()" ios.position="right">
         <label [text]="iconClose" class="p-20 ico btn-active"></label>
     </ActionItem>
 </ns-action-bar>
