--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,7 +4,7 @@
 
         <Image src="~/assets/images/logo.png"></Image>
 
-        <TextField hint="{{iconEmail}} Correo Electronico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
+        <TextField hint="{{iconEmail}} Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" [(ngModel)]="email" class="input input-rounded" required></TextField>
         <TextField hint="{{iconPassword}} Contraseña" secure="true" returnKeyType="done" [(ngModel)]="password" class="input input-rounded" required></TextField>
 
         <Button text="Ingresar a tu Cuenta &#xea13; " [isEnabled]="!_usuarioService.processing" class="btn-primary btn-active ico" (tap)="ingresar()"></Button>
@@ -12,7 +12,7 @@
         <ActivityIndicator class="activity-indicator" [busy]="_usuarioService.processing" [visibility]="_usuarioService.processing ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
 
         <StackLayout class="container-bottom-login">
-            <Label text="¿No tienes una cuenta? Registrate" (tap)="irRegistrar()" class=" h4 label" [isEnabled]="!_usuarioService.processing"></Label>
+            <Label text="¿Nó tienes una cuenta? Regístrate" (tap)="irRegistrar()" class=" h4 label" [isEnabled]="!_usuarioService.processing"></Label>
         </StackLayout>
 
     </StackLayout>
