--- a/src/app/pages/tabs/tabs.component.html
+++ b/src/app/pages/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <TabView class="tab-view ico" androidTabsPosition="bottom" tabTextFontSize="25">
-    <StackLayout *tabItem="{title: '&#xe901;'}">
+    <StackLayout class="ico" *tabItem="{title: '&#xe901;'}">
         <page-router-outlet name="productosTab"></page-router-outlet>
     </StackLayout>
 
